acvus-mir-test/tests/snapshots/inline__inline_boolean_logic.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = ref $v1
     3 │   r1 = load r0
     4 │   r2 = ref $v2
     5 │   r3 = load r2
     6 │   r4 = r1 && r3
     7 │   return r4

    ; r0 (v6) : Ref<Bool>
    ; r1 ($a) : Bool
    ; r2 (v8) : Ref<Bool>
    ; r3 ($b) : Bool
    ; r4 (v10) : Bool
    ; r5 (both(...)) : Bool
    ; r6 (v2) : Bool
    ; r7 (v1) : Bool
