acvus-mir-test/tests/snapshots/inline__inline_callee_lambda_captures_param.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = context_project @items
     3 │   r3 = context_load r2
     5 │   r4 = call #0(r3)
     6 │   r5 = closure L0 []
     7 │   r6 = call #1(r4, r5)
     8 │   r7 = call #2(r6)
     9 │   return r7

    ; r0 (@items) : List<Int>
    ; r1 (v2) : List<Int>
    ; r2 (@items) : List<Int>
    ; r3 (v4) : List<Int>
    ; r4 (v9) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r5 (v10) : Fn(Int) -> Int
    ; r6 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r7 (collect(...)) : List<Int>
    ; r8 (add_n(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r9 (v5) : Int
    ; r10 ($xs) : List<Int>
