acvus-mir-test/tests/snapshots/inline__inline_callee_returns_closure_result.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     3 │   r0 = list [1 (r1), 2 (r2), 3 (r3)]
     4 │   r4 = cast DequeToList r0
     5 │   r5 = call #0(r4)
     6 │   r6 = closure L0 []
     7 │   r7 = call #1(r5, r6)
     8 │   r8 = call #2(r7)
     9 │   return r8

    ; r0 (v3) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r3 (v2) : Int
    ; r4 (v4) : List<Int>
    ; r5 (v8) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r6 (v9) : Fn(Int) -> Int
    ; r7 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r8 (collect(...)) : List<Int>
    ; r9 ($xs) : List<Int>
    ; r10 (apply_double(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
