acvus-mir-test/tests/snapshots/inline__inline_callee_takes_lambda_arg.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = list [1 (r1), 2 (r2)]
     3 │   r3 = cast DequeToList r0
     4 │   r4 = call #0(r3)
     5 │   r5 = closure L0 []
     6 │   r6 = call #1(r4, r5)
     7 │   r7 = call #2(r6)
     8 │   return r7

    ; r0 (v3) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v1) : Int
    ; r2 (v2) : Int
    ; r3 (v4) : List<Int>
    ; r4 (v8) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r5 (v9) : Fn(Int) -> Int
    ; r6 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r7 (collect(...)) : List<Int>
    ; r8 ($xs) : List<Int>
    ; r9 (transform(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
