acvus-mir-test/tests/snapshots/inline__inline_callee_uses_builtin_len.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     3 │   r0 = list [1 (r1), 2 (r2), 3 (r3)]
     4 │   r4 = cast DequeToList r0
     5 │   r5 = call #0(r4)
     6 │   return r5

    ; r0 (v3) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r3 (v2) : Int
    ; r4 (v4) : List<Int>
    ; r5 (len(...)) : Int
    ; r6 ($xs) : List<Int>
    ; r7 (count(...)) : Int
