acvus-mir-test/tests/snapshots/inline__inline_callee_writes_context.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 │   r0 = context_project @count
     2 │   r1 = context_load r0
     3 │   r2 = context_project @count
     4 │   ctx_store r2 = 42 (r3)
     5 │   return 42 (r3)

    ; r0 (@count) : Int
    ; r1 (v4) : Int
    ; r2 (v6) : Int
    ; r3 (v1) : Int
    ; r4 ($x) : Int
    ; r5 ($x) : Int
    ; r6 (set_count(...)) : Int
