acvus-mir-test/tests/snapshots/inline__inline_caller_and_callee_read_same_context.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @count
     1 │   r1 = context_load r0
     2 │   r2 = context_project @count
     3 │   r3 = context_load r2
     5 │   r4 = context_project @count
     6 │   r5 = context_load r4
     7 │   r6 = context_project @count
     8 │   r7 = context_load r6
     9 │   r8 = 1 (r9) + r7
    10 │   r10 = r3 + r8
    11 │   return r10

    ; r0 (@count) : Int
    ; r1 (v2) : Int
    ; r2 (@count) : Int
    ; r3 (v4) : Int
    ; r4 (@count) : Int
    ; r5 (v9) : Int
    ; r6 (@count) : Int
    ; r7 (v12) : Int
    ; r8 (v13) : Int
    ; r9 (v5) : Int
    ; r10 (v7) : Int
    ; r11 ($x) : Int
    ; r12 (add_count(...)) : Int
