acvus-mir-test/tests/snapshots/inline__inline_chain.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = 3 (r1) + 1 (r2)
     3 │   r3 = r0 + r0
     4 │   return r3

    ; r0 (v6) : Int
    ; r1 (v1) : Int
    ; r2 (v5) : Int
    ; r3 (v9) : Int
    ; r4 (double(...)) : Int
    ; r5 ($x) : Int
    ; r6 (inc(...)) : Int
    ; r7 ($x) : Int
    ; r8 ($x) : Int
