acvus-mir-test/tests/snapshots/inline__inline_chain_with_lambda.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     3 │   r0 = list [1 (r1), 2 (r2), 3 (r3)]
     4 │   r4 = cast DequeToList r0
     5 │   r5 = call #0(r4)
     6 │   r6 = closure L0 []
     7 │   r7 = call #1(r5, r6)
     8 │   r8 = call #2(r7)
     9 │   r9 = call #0(r8)
    11 │   r10 = closure L0 []
    12 │   r11 = call #3(r9, 0 (r12), r10)
    13 │   return r11

    ; r0 (v3) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r3 (v2) : Int
    ; r4 (v4) : List<Int>
    ; r5 (v9) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r6 (v10) : Fn(Int) -> Int
    ; r7 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r8 (collect(...)) : List<Int>
    ; r9 (v13) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r10 (v15) : Fn(Int, Int) -> Int
    ; r11 (fold(...)) : Int
    ; r12 (v14) : Int
    ; r13 ($xs) : List<Int>
    ; r14 (sum_list(...)) : Int
    ; r15 (double_all(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r16 ($xs) : List<Int>
